8213541: WebView does not handle HTTP response without ContentType

Reviewed-by: mbilla, arajkumar